port over rolling average and begin work on fit

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,8 @@ Imports:
     slider,
     magrittr,
     ggplot2,
-    ellipsis
+    ellipsis,
+    MASS
 Suggests: 
     testthat,
     outbreaks,
