--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,16 @@
 
 S3method(add_rolling_average,default)
 S3method(add_rolling_average,incidence2)
+S3method(fit,default)
+S3method(fit,incidence2)
+S3method(plot,incidence2_ra)
 S3method(tidy,estimate_peak)
 export("%>%")
 export(add_rolling_average)
 export(bootstrap)
 export(estimate_peak)
 export(find_peak)
-export(plot_rolling_average)
+export(fit)
 export(remove_rolling_average)
 export(tidy)
 importFrom(dplyr,all_of)
