add plot.incidence2_fit function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(add_rolling_average,default)
 S3method(add_rolling_average,incidence2)
 S3method(fit,default)
 S3method(fit,incidence2)
+S3method(plot,incidence2_fit)
 S3method(plot,incidence2_ra)
 S3method(tidy,estimate_peak)
 export("%>%")
