add remotes and update README

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,5 +31,6 @@ Suggests:
     rmarkdown,
     covr
 Remotes:
-    reconhub/incidence2
+    reconhub/incidence2,
+    reconhub/trending
 VignetteBuilder: knitr
