various fixes and vignette changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,27 +3,30 @@
 S3method("[",incidence2_fit)
 S3method("[<-",incidence2_fit)
 S3method("names<-",incidence2_fit)
-S3method(add_growth_rate,default)
-S3method(add_growth_rate,incidence2_fit)
 S3method(add_rolling_average,default)
 S3method(add_rolling_average,incidence2)
 S3method(fit_curve,default)
 S3method(fit_curve,incidence2)
+S3method(growth_rate,default)
+S3method(growth_rate,incidence2_fit)
 S3method(is_err,default)
 S3method(is_err,incidence2_fit)
 S3method(is_ok,default)
 S3method(is_ok,incidence2_fit)
+S3method(is_warning,default)
+S3method(is_warning,incidence2_fit)
 S3method(plot,incidence2_fit)
 S3method(plot,incidence2_rolling)
 S3method(tidy,estimate_peak)
-export(add_growth_rate)
 export(add_rolling_average)
 export(bootstrap)
 export(estimate_peak)
 export(find_peak)
 export(fit_curve)
+export(growth_rate)
 export(is_err)
 export(is_ok)
+export(is_warning)
 export(tidy)
 importFrom(dplyr,all_of)
 importFrom(dplyr,grouped_df)
