--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: incidence2plus
+Package: i2extras
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: utils::person(given = "Tim", family = "Taylor", email = "tjtnew@gmail.com", role = c("aut", "cre"),
