--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,8 @@ S3method(fit_curve,default)
 S3method(fit_curve,incidence2)
 S3method(growth_rate,default)
 S3method(growth_rate,incidence2_fit)
-S3method(is_err,default)
-S3method(is_err,incidence2_fit)
+S3method(is_error,default)
+S3method(is_error,incidence2_fit)
 S3method(is_ok,default)
 S3method(is_ok,incidence2_fit)
 S3method(is_warning,default)
@@ -23,9 +23,10 @@ export(estimate_peak)
 export(find_peak)
 export(fit_curve)
 export(growth_rate)
-export(is_err)
+export(is_error)
 export(is_ok)
 export(is_warning)
+export(unnest)
 importFrom(dplyr,all_of)
 importFrom(dplyr,grouped_df)
 importFrom(dplyr,n)
@@ -34,3 +35,4 @@ importFrom(dplyr,summarise)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rlang,sym)
+importFrom(tidyr,unnest)
