renaming file, this test passes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,13 +22,17 @@ export(bootstrap)
 export(estimate_peak)
 export(find_peak)
 export(fit_curve)
+export(flag_low_counts)
 export(growth_rate)
 export(is_error)
 export(is_ok)
 export(is_warning)
 export(unnest)
+importFrom(dplyr,across)
 importFrom(dplyr,all_of)
 importFrom(dplyr,grouped_df)
+importFrom(dplyr,if_else)
+importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
