--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,8 +35,8 @@ importFrom(dplyr,if_else)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(dplyr,select)
-importFrom(dplyr,summarise)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
+import(data.table)
 importFrom(rlang,sym)
 importFrom(tidyr,unnest)
