--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ S3method(add_rolling_average,default)
 S3method(add_rolling_average,incidence2)
 S3method(fit_curve,default)
 S3method(fit_curve,incidence2)
+S3method(fit_model,default)
+S3method(fit_model,trending_model)
 S3method(growth_rate,default)
 S3method(growth_rate,incidence2_fit)
 S3method(is_error,default)
@@ -19,24 +21,38 @@ S3method(plot,incidence2_fit)
 S3method(plot,incidence2_rolling)
 export(add_rolling_average)
 export(bootstrap)
+export(brms_model)
 export(estimate_peak)
 export(find_peak)
 export(fit_curve)
+export(fit_model)
 export(flag_low_counts)
+export(glm_model)
+export(glm_nb_model)
 export(growth_rate)
+export(incidence)
 export(is_error)
 export(is_ok)
 export(is_warning)
+export(lm_model)
 export(unnest)
 importFrom(dplyr,across)
-importFrom(dplyr,all_of)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,full_join)
 importFrom(dplyr,grouped_df)
 importFrom(dplyr,if_else)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(dplyr,select)
-importFrom(rlang,":=")
 importFrom(rlang,.data)
 import(data.table)
 importFrom(rlang,sym)
 importFrom(tidyr,unnest)
+importFrom(dplyr,nest_by)
+importFrom(incidence2,incidence)
+importFrom(rlang,sym)
+importFrom(tidyr,unnest)
+importFrom(trending,brms_model)
+importFrom(trending,glm_model)
+importFrom(trending,glm_nb_model)
+importFrom(trending,lm_model)
