--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,6 @@ S3method(add_rolling_average,default)
 S3method(add_rolling_average,incidence2)
 S3method(fit_curve,default)
 S3method(fit_curve,incidence2)
-S3method(fit_model,default)
-S3method(fit_model,trending_model)
 S3method(growth_rate,default)
 S3method(growth_rate,incidence2_fit)
 S3method(is_error,default)
@@ -25,7 +23,6 @@ export(brms_model)
 export(estimate_peak)
 export(find_peak)
 export(fit_curve)
-export(fit_model)
 export(flag_low_counts)
 export(glm_model)
 export(glm_nb_model)
@@ -36,23 +33,26 @@ export(is_ok)
 export(is_warning)
 export(lm_model)
 export(unnest)
+import(data.table)
 importFrom(dplyr,across)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,full_join)
 importFrom(dplyr,grouped_df)
 importFrom(dplyr,if_else)
 importFrom(dplyr,mutate)
-importFrom(dplyr,n)
-importFrom(dplyr,select)
-importFrom(rlang,.data)
-import(data.table)
-importFrom(rlang,sym)
-importFrom(tidyr,unnest)
 importFrom(dplyr,nest_by)
 importFrom(incidence2,incidence)
+importFrom(rlang,.data)
 importFrom(rlang,sym)
+importFrom(stats,na.omit)
+importFrom(stats,quantile)
+importFrom(stats,rmultinom)
+importFrom(stats,setNames)
+importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
 importFrom(tidyr,unnest)
 importFrom(trending,brms_model)
 importFrom(trending,glm_model)
 importFrom(trending,glm_nb_model)
 importFrom(trending,lm_model)
+importFrom(utils,head)
