update due to change in upstream trending package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,7 @@ S3method(plot,incidence2_fit)
 S3method(plot,incidence2_rolling)
 export(add_rolling_average)
 export(bootstrap)
-export(brms_model)
+export(brm_model)
 export(estimate_peak)
 export(find_peak)
 export(fit_curve)
@@ -35,8 +35,6 @@ export(lm_model)
 export(unnest)
 import(data.table)
 importFrom(dplyr,across)
-importFrom(dplyr,bind_rows)
-importFrom(dplyr,full_join)
 importFrom(dplyr,grouped_df)
 importFrom(dplyr,if_else)
 importFrom(dplyr,mutate)
@@ -51,7 +49,7 @@ importFrom(stats,setNames)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,unnest)
-importFrom(trending,brms_model)
+importFrom(trending,brm_model)
 importFrom(trending,glm_model)
 importFrom(trending,glm_nb_model)
 importFrom(trending,lm_model)
