--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,11 +16,12 @@ BugReports: https://github.com/reconverse/i2extras/issues
 Encoding: UTF-8
 License: MIT + file LICENSE
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.3
+Depends:
+    incidence2 (>= 1.9.9.9000),
 Imports:
     utils,
     stats,
-    incidence2 (>= 1.2.0),
     trending (> 0.0.3),
     dplyr,
     tibble,
