Revert "relax versioning"
This reverts commit ae475545dcd4cfd377f63733b65f18a9dd0b121e.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ Imports:
     utils,
     stats,
     incidence2 (>= 1.2.0),
-    trending (> 0.0.3),
+    trending (>= 0.0.4),
     dplyr,
     tibble,
     rlang,
