Revert "update due to change in upstream trending package"
This reverts commit 509faddb6c49f2494a2be067b9b65666ecedd2c5.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,7 @@ S3method(plot,incidence2_fit)
 S3method(plot,incidence2_rolling)
 export(add_rolling_average)
 export(bootstrap)
-export(brm_model)
+export(brms_model)
 export(estimate_peak)
 export(find_peak)
 export(fit_curve)
@@ -35,6 +35,8 @@ export(lm_model)
 export(unnest)
 import(data.table)
 importFrom(dplyr,across)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,full_join)
 importFrom(dplyr,grouped_df)
 importFrom(dplyr,if_else)
 importFrom(dplyr,mutate)
@@ -49,7 +51,7 @@ importFrom(stats,setNames)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,unnest)
-importFrom(trending,brm_model)
+importFrom(trending,brms_model)
 importFrom(trending,glm_model)
 importFrom(trending,glm_nb_model)
 importFrom(trending,lm_model)
