--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,6 @@
 S3method("[",incidence2_fit)
 S3method("[<-",incidence2_fit)
 S3method("names<-",incidence2_fit)
-S3method(add_rolling_average,default)
-S3method(add_rolling_average,incidence2)
-S3method(fit_curve,default)
-S3method(fit_curve,incidence2)
 S3method(growth_rate,default)
 S3method(growth_rate,incidence2_fit)
 S3method(is_error,default)
@@ -16,43 +12,44 @@ S3method(is_ok,incidence2_fit)
 S3method(is_warning,default)
 S3method(is_warning,incidence2_fit)
 S3method(plot,incidence2_fit)
-S3method(plot,incidence2_rolling)
 export(add_rolling_average)
 export(bootstrap)
-export(brms_model)
 export(estimate_peak)
 export(find_peak)
 export(fit_curve)
+export(fit_model)
 export(flag_low_counts)
-export(glm_model)
-export(glm_nb_model)
 export(growth_rate)
-export(incidence)
 export(is_error)
 export(is_ok)
 export(is_warning)
-export(lm_model)
 export(unnest)
 import(data.table)
+import(incidence2)
 importFrom(dplyr,across)
-importFrom(dplyr,bind_rows)
-importFrom(dplyr,full_join)
+importFrom(dplyr,all_of)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,grouped_df)
 importFrom(dplyr,if_else)
 importFrom(dplyr,mutate)
 importFrom(dplyr,nest_by)
-importFrom(incidence2,incidence)
 importFrom(rlang,.data)
-importFrom(rlang,sym)
-importFrom(stats,na.omit)
+importFrom(stats,as.formula)
+importFrom(stats,confint)
+importFrom(stats,family)
+importFrom(stats,formula)
+importFrom(stats,gaussian)
+importFrom(stats,predict)
+importFrom(stats,qbinom)
+importFrom(stats,qgamma)
+importFrom(stats,qnbinom)
+importFrom(stats,qpois)
+importFrom(stats,qt)
 importFrom(stats,quantile)
 importFrom(stats,rmultinom)
 importFrom(stats,setNames)
-importFrom(tidyr,pivot_longer)
-importFrom(tidyr,pivot_wider)
+importFrom(tibble,as_tibble)
+importFrom(tibble,new_tibble)
+importFrom(tibble,tibble)
+importFrom(tibble,validate_tibble)
 importFrom(tidyr,unnest)
-importFrom(trending,brms_model)
-importFrom(trending,glm_model)
-importFrom(trending,glm_nb_model)
-importFrom(trending,lm_model)
-importFrom(utils,head)
